fixed ui layout issues and updated inconsistent naming conventions

--- a/src/styles/cardbase.css
+++ b/src/styles/cardbase.css
@@ -1,5 +1,3 @@
-
-
 .details{
     /* border: solid black 1px; */
     align-items: center;
@@ -85,7 +83,7 @@ img{
 }
 
 
-.addtocardbtncontainer{
+.addtolistbtncontainer, .removecontainer{
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -94,7 +92,7 @@ img{
     /* border: red solid 2px; */
 }
 
-.addtocardbtncontainer button{
+.adddelete{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -103,17 +101,17 @@ img{
     border-radius: 100%;
 }
 
-.addtocardbtncontainer button:hover{
+.adddelete button:hover{
     border: 1px white solid;
 }
 
 
-.addtocart{
+.savetolist{
     font-size: 20px;
     color: #050d1f;
 }
 
-.addtocart:hover{
+.savetolist:hover{
     font-size: 20px;
     color: white;
     transition: 0.5s;
