--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,11 +5,15 @@
     font-family: "Merriweather", serif;
 }
 
+body{
+     background-color: #080e1b;
+}
+
 .maindiv{
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
-    background-color: #080e1b;
+   
     /* position: relative; */
 } 
 
@@ -52,6 +56,14 @@ button:hover{
 } 
 
 
+button {
+  width: auto;              
+  align-self: center;       
+  border: none; 
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
 
 .txtlight{
     color: #fcfdff;
@@ -76,6 +88,18 @@ button:hover{
 .secondarybtn{
     background-color: white;
     color: black;
+}
+
+.redbtn{
+    background-color: rgb(248, 54, 54);
+    color: white;
+}
+
+.redbtn:hover{
+    background-color: rgb(150, 3, 3);
+    border: rgb(151, 67, 67) 1px solid;
+    color: white;
+    transition: 0.5s;
 }
 
 .hide{
