--- a/src/styles/star.css
+++ b/src/styles/star.css
@@ -14,7 +14,7 @@
 }
 
 .starcolour{
-    color: rgb(219, 200, 58);
+    color: rgb(255, 212, 22);
     font-size: 20px;
     cursor: pointer;
 
